--feat Fixing hero section background image size on mobile devices.

--- a/assets/sass/sections/primary.scss
+++ b/assets/sass/sections/primary.scss
@@ -10,7 +10,7 @@
   @include mobile{
     background-image: url('../images/hero_bg_mobile.png');
     padding: 136px 16px 228px;
-    background-size: 100% 25%;
+    background-size: 100% 45%;
   }
 
   .mainImg{
